--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -58,6 +58,7 @@ header .header-span:hover{
 /* SECT-1 CON SFONDO BLU */
 
 #sect-1{
+    height: 400px;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -65,6 +66,7 @@ header .header-span:hover{
     
     align-items: center;
     padding: 20px;
+
 }
 
 h1{
@@ -77,8 +79,10 @@ h1{
     display: flex;
     flex-direction: row;
     width: 60%;
-    margin-top: 20px;
-    
+  
+
+    position: relative;
+    top: 80px;
 }
 
 #text-sect1{
@@ -91,16 +95,17 @@ h1{
 }
 
 figure{
-    position: relative;
-    width: 60%
+    
+    width: 60%;
+    
 }
 
 #text-img-container figure img{
   width:100% ;
-  height: 100%;
-position: absolute;
-top:0;
-bottom:-30px;
+  
+/* position: absolute;
+top:0px;
+bottom:0px; */
 }
 
 #text-sect1 .button-blue{
