--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: sans-serif;
 }
 
 .button-blue{
@@ -50,7 +51,7 @@ header #right-head .header-span{
 
 
 header .header-span:hover{
-    border-bottom: 1px solid lightgray;
+    border-bottom: 1px solid BLACK;
 }
 
 /* FINE HEADER */
@@ -58,28 +59,29 @@ header .header-span:hover{
 /* SECT-1 CON SFONDO BLU */
 
 #sect-1{
-    height: 400px;
+
     width: 100%;
     display: flex;
     flex-direction: column;
     background-color:#b4d0e7 ;
-    
+
     align-items: center;
     padding: 20px;
 
 }
 
 h1{
-    width: 60%;
+    width: 80%;
     margin: auto;
-    
+    font-size: 70px;
+
 }
 
 #text-img-container{
     display: flex;
     flex-direction: row;
-    width: 60%;
-  
+    width: 80%;
+
 
     position: relative;
     top: 80px;
@@ -89,20 +91,20 @@ h1{
    width: 40%;
     display: flex;
     flex-direction: column;
-    gap: 20px;
-    
-   
+    gap: 40px;
+
+
 }
 
 figure{
-    
+
     width: 60%;
-    
+
 }
 
 #text-img-container figure img{
   width:100% ;
-  
+
 /* position: absolute;
 top:0px;
 bottom:0px; */
@@ -110,11 +112,107 @@ bottom:0px; */
 
 #text-sect1 .button-blue{
     width: 45%;
-    padding: 5px;
+    padding: 8px;
 }
 
 #text-sect1 a{
     font-size: 50px;
     text-decoration: none;
     color: black;
+}
+/* FINE SEZ 1 */
+
+
+/* SEZIONE 2 */
+
+#sect-2{
+    margin-top: 200px;
+    width: 60%;
+    margin-inline:auto;
+    /* background-color: lightblue; */
+}
+
+#sect-2 h2{
+    font-size: 40px;
+    margin-bottom: 30px;
+}
+
+#head-sect2{
+    display: flex;
+    gap: 20px;
+    margin-bottom: 30px;
+}
+
+#sect-2 #head-sect2 .container-round{
+    display: flex;
+    flex-direction: row;
+
+}
+
+#sect-2 #head-sect2 .container-round .round-button{
+    width: 20px;
+    height: 20px;
+    border: 1px solid lightgray;
+    border-radius: 50%;
+}
+/* FINE HEADER SEZIONE 2 */
+
+/* CARDS SEZIONE 2 */
+
+#container-cards{
+    /* height: 1000px; */
+    width: 100%;
+    background-color: red;
+    display: flex;
+    gap: 40px;
+}
+
+.card{
+    /* height: 200px; */
+    width: calc(100% / 3);
+   
+
+    display: flex;
+    flex-direction: column;
+   
+
+    background-color: blue;
+    border: 1px solid lightgray;
+
+}
+
+.header-card{
+    width: 100%;
+    text-align: center;
+    border-bottom: 1px solid lightgray;
+    margin-bottom: 20px;
+    padding: 10px;
+}
+/* FINE HEADER CARD */
+
+.top-card{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px;
+}
+/* FINE TOP-CARD */
+
+.mid-card{
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    gap: 10px;
+}
+
+.card .mid-card .button-blue{
+    padding: 10px;
+    margin-top: 20px;
+}
+
+.card .mid-card hr{
+    width: 30%;
+    background-color: lightgray;
+    border: none;
+    height: 1px;
 }
