--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -299,8 +299,53 @@ bottom:0px; */
     font-size: 20px;
 }
 
-#sect-3 #right-sect3 #button-sect3{
+#sect-3 #right-sect3 a{
+    color: black;
     border: 1px solid black;
     padding: 10px;
+    text-decoration: none;
+}
+
+/* INIZIO SEZIONE 4 */
+
+#sect-4{
+    margin-top: 100px;
+}
+
+#sect-4 h2{
+    width: 60%;
+    margin: auto;
+    padding-inline: 30px;
+}
+
+#container-cards-sect4{
+    width: 60%;
     
+
+    margin: auto;
+    display: flex;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+
+
+.card-sect4{
+    width: calc(100% / 3);
+    /* padding: 30px; */
+}
+
+#container-cards-sect4 figure{
+    width: 100%;
+   
+}
+
+#container-cards-sect4 figure img{
+    width: 100%;
+}
+
+.card-sect4 .txt-sect4{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
 }
