--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -312,10 +312,10 @@ bottom:0px; */
     margin-top: 100px;
 }
 
-#sect-4 h2{
+#sect-4>h2{
     width: 60%;
     margin: auto;
-    padding-inline: 30px;
+    font-size: 40px;
 }
 
 #container-cards-sect4{
@@ -326,12 +326,13 @@ bottom:0px; */
     display: flex;
     gap: 20px;
     flex-wrap: wrap;
+    
 }
 
 
 
 .card-sect4{
-    width: calc(100% / 3);
+    width: calc(33% - 20px);
     /* padding: 30px; */
 }
 
@@ -349,3 +350,26 @@ bottom:0px; */
     flex-direction: column;
     gap: 20px;
 }
+
+/* FOOTER SECT 4 */
+
+#footer-sect4{
+    width: 60%;
+    margin: auto;
+    margin-block: 100px;
+
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
+}
+
+#footer-sect4 h2{
+    font-size: 40px;
+    width: 60%;
+}
+
+#footer-sect4 a{
+    color: blue;
+}
+
+
