--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -372,4 +372,100 @@ bottom:0px; */
     color: blue;
 }
 
+/* SEZIONE 5 */
 
+#container-sect5{
+    display: flex;
+    flex-direction: row;
+    height: 600px;
+}
+
+
+
+.box-aside-sect5{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+
+    width: calc(100% / 3);
+    
+
+
+    background-color: red;
+    
+}
+
+/* BOX MID */
+#box-mid{
+    width: calc(100% / 3);
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
+    padding: 40px;
+    background-color: #f5f5f5;
+    overflow: auto;
+}
+
+#box-mid hr{
+    width: 20%;
+}
+
+#box-mid figure img{
+    width: 80%;
+}
+
+
+.card-box-sect5{
+    display: flex;
+    position: relative;
+    width: calc(100% / 2);
+    min-height: 300px;  max-height: 300px;
+
+}
+
+.box-aside-sect5 .card-box-sect5 svg{
+    width: 60%;
+    position: absolute; 
+    fill: white;
+
+    top: 50%;
+
+    left:50%;
+
+    transform: translate(-50%, -50%)
+
+}
+
+/* BOXES COLORS */
+
+#designit{
+    background-color:#a2d39b ;
+}
+
+#asu{
+    background-color: #61082b;
+}
+
+#uf{
+    background-color: #0093ce;
+}
+
+#topps{
+    background-color: #ff1c1c;
+}
+
+#wbr{
+    background-color: #d5001f;
+}
+
+#hearst{
+    background-color: #b4d0e7;
+}
+
+#lonely{
+    background-color: #0d2481;
+}
+
+#clear{
+    background-color: #ffd830;
+}
